提前注册所有成就